--- a/src/app/components/top-nav/top-nav.component.scss
+++ b/src/app/components/top-nav/top-nav.component.scss
@@ -2,6 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 7vh;
+    height: 5vh;
     min-height: 3rem;
 }
